--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
     "name": "zfegg/stratigility-logging-error",
     "description": "Logging for errors in Zend Expressive",
+    "license": "MIT",
+    "keywords": [
+        "log",
+        "error",
+        "expressive",
+        "zend"
+    ],
     "require": {
         "psr/container": "^1.0",
         "psr/log": "^1.0",
