--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
         "psr/container": "^1.0",
         "psr/log": "^1.0",
         "psr/http-message": "^1.0",
-        "zendframework/zend-stratigility": "^2.1 || ^3.0.0rc1"
+        "laminas/laminas-stratigility": "^2.1 || ^3.0.0rc1",
+        "laminas/laminas-dependency-plugin": "^1.0"
     },
     "require-dev": {
         "monolog/monolog": "^1.23",
-        "zendframework/zend-diactoros": "^1.7",
-        "zendframework/zend-coding-standard": "^1.0",
+        "laminas/laminas-diactoros": "^1.7",
+        "laminas/laminas-coding-standard": "^1.0",
         "phpunit/phpunit": "^6.0"
     },
     "authors": [
