--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": ">=7.4",
         "psr/container": "^1.0 || ^2.0",
         "psr/log": "^1.0 || ^2.0 || ^3.0",
-        "psr/http-message": "^1.0",
-        "laminas/laminas-stratigility": "^2.1 || ^3.0.0"
+        "psr/http-message": "^1.0 || ^2.0",
+        "laminas/laminas-stratigility": "^2.1 || ^3.0.0 || ^4"
     },
     "require-dev": {
         "monolog/monolog": "^1.23",
