Fix github actions

--- a/composer.json
+++ b/composer.json
@@ -49,5 +49,11 @@
         "psr-4": {
             "ZfeggTest\\Stratigility\\LoggingError\\": "test/"
         }
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
