--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -23,7 +23,7 @@ jobs:
           coverage: xdebug #optional
       - name: Get composer cache directory
         id: composer-cache
-        run: echo "name=dir::$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
       - name: Cache composer dependencies
         uses: actions/cache@v4
         with:
