--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "monolog/monolog": "^1.23",
-        "laminas/laminas-diactoros": "^2.0",
+        "laminas/laminas-diactoros": "^2.0 | ^3",
         "slevomat/coding-standard": "^7.0.12",
         "phpunit/phpunit": "^9.0"
     },
@@ -48,6 +48,12 @@
     "autoload-dev": {
         "psr-4": {
             "ZfeggTest\\Stratigility\\LoggingError\\": "test/"
+        }
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
